@@ -97,5 +97,10 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Screen banks enabled, set at compile time (default is 4). Use with OSBYTE
   112 and 113. Not enabled for MODE 7.
 - OSBYTEs 20 and 25 implemented for resetting the system font.
-- BB4W/BBCSDL's VDU23,22 implemented to a degree.
+- BB4W/BBCSDL's VDU23,22 implemented to a degree, defining MODE 126.
 - MODEs 3 and 6 now have black bars when background colour used.
+- RISC OS 3.5-style MODE commands will define a new mode (126) if a previously
+  defined mode is not available. The extended RISC OS 5.x format is not
+  supported. Eigen factor affects both drawing and reading mouse pointer
+  positon; on RISC OS 3.7 the eigen factor only affects drawing.
+- *NewMode extended to allow input of X and Y eigen factors.
